<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/bglogin"
    tools:context=".ui.activity.detail_profil">

    <ImageView
        android:id="@+id/foto_profil"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:contentDescription="@string/foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        tools:src="@tools:sample/avatars" />
    

   <LinearLayout
       android:id="@+id/LinearLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="20dp"
       android:orientation="vertical"
       tools:ignore="MissingConstraints"
       app:layout_constraintTop_toBottomOf="@+id/foto_profil"
       tools:layout_editor_absoluteX="20dp">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/nama_user"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="sans-serif-black"
               android:layout_marginStart="8dp"
               android:text="@string/nama_user"
               android:textSize="16sp"
               android:textStyle="bold"
               android:contentDescription="@string/todo"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"/>
           <TextView
               android:id="@+id/hint_nama_user"
               android:fontFamily="sans-serif-black"
               android:textStyle="bold"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:text="@string/namanya"
               android:textSize="16sp"
               android:textColorHint="@color/black"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0"
               app:layout_constraintStart_toEndOf="@+id/nama_user"
               app:layout_constraintTop_toTopOf="parent"/>
       </androidx.constraintlayout.widget.ConstraintLayout>

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/alamat_user"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:contentDescription="@string/todo"
               android:text="@string/alamat"
               android:textSize="16sp"
               android:fontFamily="sans-serif-black"
               android:textStyle="bold"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"/>

           <TextView
               android:id="@+id/hint_alamat_user"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:fontFamily="sans-serif-black"
               android:textSize="16dp"
               android:text="@string/alamat_user"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.029"
               app:layout_constraintStart_toEndOf="@+id/alamat_user"
               app:layout_constraintTop_toTopOf="parent"/>
       </androidx.constraintlayout.widget.ConstraintLayout>
   </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/kartu"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:padding="1dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/riwayat_sehat"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/riwayat_sehat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>